[package]
name = 'blenvy-extensions'
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
blenvy = { git = "https://github.com/kaosat-dev/Blenvy/", branch = "blenvy", version = "^0.1.0-alpha.1" }
bevy_rapier3d = "0.27.0"
bevy = { version = "^0.14.0", default-features = false, features = [
  "bevy_asset",
  "bevy_scene",
  "bevy_gltf",
  "animation",
] }
